ya se pude actualizar

--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        hola mundo
+    <div class="registro" id="registro">
+        <form class="form" action="" method="post" onsubmit="return agregar();" >
+            <label class="form-entrada">name:</label> <input type="text" name="" id="name" required>
+            <label class="form-entrada">password:</label> <input type="text" name="" id="password" required>
+            <input type="submit" value="cargar" >
+        </form>
+    </div>
+    <div class="buscador" id="buscador">
+        <div>A</div>
+        <div>X</div>
+        <div>F</div>
+        <div>G</div>
+        <div>H</div>
     </div>
 </body>
 </html>
