--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="content" id="content">
-        <h1>Movies of yesterday and today</h1>
+        <h1 class="titulo">Movies of yesterday and today</h1>
         <div class="registro" id="registro">
             <form class="form-registro" action="" method="post" onsubmit="return addUsu();" >
                 <label class="form-registro-entrada-name">Name</label> <input class="form-registro-entrada-name" type="text" name="" id="name" required>
