ya muestra la query falta favorito

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
         </div>
         <div class="buscador" id="buscador">
            <div class="form-buscador" action="" >
-             <label class="form-buscador-entrada-name">Name</label> <input class="form-buscador-entrada-name" type="text" name="" id="name1" required>
+             <label class="form-buscador-entrada-name">Type</label> <input class="form-buscador-entrada-name" type="text" name="" id="name1" required>
              <input class="form-buscador-entrada-submit" type="submit" value="Input"  onclick="buscar()">
            </div>
-            <button onclick="mostrar()" >mostrar</button>
+            <div class="resultado-buscador">
+                <div class="favorite" id="favorite"></div>
+                <div class="taquilla" id="taquilla"></div>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
