falta mas css y mejorar parte logica + nombres

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
              <label class="form-buscador-entrada-name">Type</label> <input class="form-buscador-entrada-name" type="text" name="" id="name1" required>
              <input class="form-buscador-entrada-submit" type="submit" value="Input"  onclick="buscar()">
            </div>
-            <div class="resultado-buscador">
+            <div class="resultado-buscador" id="resultado-buscador">
                 <div class="favorite" id="favorite"></div>
                 <div class="taquilla" id="taquilla"></div>
             </div>
